# inf2004_robotcar

./: .gitignore  MappingAlgorithm.c  MappingAlgorithm.h  README.md  main.c
Robot/: CMakeLists.txt  htmldata.c
Robot/pico_w/wifi/: CMakeLists.txt  lwipopts_examples_common.h
Robot/pico_w/wifi/freertos/: CMakeLists.txt
Robot/pico_w/wifi/freertos/irr/: CMakeLists.txt  barcode_reader.c  barcode_reader.h  cgi.h  convert_html.py  encoder.c  encoder.h  global_defined.h  gpio_handler.c  gpio_handler.h  htmldata.c  ir.c  ir.h  lwipopts.h  magnetometer.c  magnetometer.h  main.c  mapping.c  mapping.h  motor.c  motor.h  obstacle.c  obstacle.h  ssi.h  webserver.c  webserver.h
Robot/pico_w/wifi/freertos/irr/html_files/: index.shtml
Robot/pico_w/wifi/freertos/obstacle_detection/: CMakeLists.txt  obstacle.c
Robot/pico_webserver/: CMakeLists.txt  htmldata.c  lwipopts.h  main.c  ssi.h
Robot/pico_webserver/html_files/: index.shtml
Robot/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
driver/encoder/: encoder.c
driver/encoder/Black box testing/: Blackbox - Wheel Encoder.docx
driver/irline/: barcode_reader.c  barcode_reader.h  ir.c  ir.h  main.c
driver/irline/Blackbox testing/: Blackbox - IR.docx
driver/magnometer/: magnometer.c
driver/magnometer/Black box testing/: Blackbox - magnometer.docx
driver/motor/: motor.c
driver/motor/Blackbox testing/: Blackbox - motor.docx
driver/obstacle_detection/: obstacle.c
driver/ultrasonic/Blackbox/: Blackbox - ultrasonic.docx
